<resources>
    <string name="app_name">Game Trio</string>

    <string name="charade">Charade</string>
    <string name="hangman">Hangman</string>
    <string name="tikBum">TikBum</string>

    <string name="choose">Choose the desired game!</string>
    <string name="play">Play</string>
    <string name="select_number_of_players">Select number of players</string>

    <string name="gallows">gallows</string>
    <string name="head">head</string>
    <string name="body">body</string>
    <string name="arm">arm</string>
    <string name="leg">leg</string>
    <string name="help">help</string>
    <string name="submit">SUBMIT</string>
    <string name="guess_the_word">Guess the word</string>
    <string name="current_high_score">current_high_score</string>

    <string name="add">Add player</string>
    <string name="info_add_activity">Current teams</string>
    <string name="players">Players</string>
    <string name="start">Start</string>
    <string name="restart">Restart Game</string>
    <string name="remove">Remove player</string>
    <string name="score">Score</string>
    <string name="name">Name</string>
    <string name="hint">Name of the player</string>

    <string name="teams">Players</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="tick">Tick</string>
    <string name="tickTock">TickTock</string>
    <string name="boom">Boom</string>
    <string name="looser">Choose player who lost the game</string>
    <string name="winners">Choose players who won the game</string>

    <string name="highscore">Highscore</string>

    <string name="create_player_text">Create a player</string>


    <string name="new_charade">Next charade</string>

    <string name="charade_text">Charade</string>
    <string name="charade_description">DESCRIPTION</string>

    <string name="reset_points">Reset points</string>
    <string name="restart_games">Restart game</string>
    <string name="title_activity_players">PlayersActivity</string>

    <string name="charade_label">Charade</string>
    <string name="charade_points_label">Charade points</string>

    <string name="tikbum_label">TikBum</string>
    <string name="tikbum_points_label">TikBum points</string>

    <string name="hangman_label">Hangman</string>
    <string name="hangman_points_label">Hangman points</string>

    <string name="add_player_label">Add player</string>
    <string name="remove_player_label">Remove player</string>

    <string name="choose_activity_label">Choose game</string>
    <string name="score_label">Score</string>
    <string name="play_with_players">Play</string>


</resources>
