<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:background="#FF000000"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFFFF">

        <RelativeLayout
                android:id="@+id/hangman_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFFFF"
                android:gravity="start"
                android:padding="10dp"
                android:paddingTop="15dp">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/gallows"
                    android:paddingStart="0dp"
                    android:paddingTop="0dp"
                    android:src="@drawable/android_hangman_gallows"/>

            <ImageView
                    android:id="@+id/head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/head"
                    android:paddingLeft="108dp"
                    android:paddingTop="23dp"
                    android:src="@drawable/android_hangman_head"/>

            <ImageView
                    android:id="@+id/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/body"
                    android:paddingLeft="120dp"
                    android:paddingTop="53dp"
                    android:src="@drawable/android_hangman_body"/>

            <ImageView
                    android:id="@+id/arm1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/arm"
                    android:paddingLeft="100dp"
                    android:paddingTop="60dp"
                    android:src="@drawable/android_hangman_arm1"/>

            <ImageView
                    android:id="@+id/arm2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/arm"
                    android:paddingLeft="120dp"
                    android:paddingTop="60dp"
                    android:src="@drawable/android_hangman_arm2"/>

            <ImageView
                    android:id="@+id/leg1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/leg"
                    android:paddingLeft="101dp"
                    android:paddingTop="90dp"
                    android:src="@drawable/android_hangman_leg1"/>

            <ImageView
                    android:id="@+id/leg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/leg"
                    android:paddingLeft="121dp"
                    android:paddingTop="90dp"
                    android:src="@drawable/android_hangman_leg2"/>
        </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:layout_toEndOf="@+id/hangman_img"
                        android:focusableInTouchMode="true"
                        android:descendantFocusability="beforeDescendants"
            >

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:id="@+id/current_player"
                      android:text="Current player: "/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="Score: "
                      android:gravity="center"
                      android:id="@+id/current_player_score"
                      android:layout_below="@+id/current_player"/>

            <EditText android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@+id/current_player_score"
                      android:id="@+id/answer"
                      android:inputType="textCapCharacters"
                      android:hint="@string/guess_the_word"
                      android:importantForAutofill="no" tools:targetApi="o"/>

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/submit_button"
                    android:text="@string/submit"
                    android:layout_below="@id/answer"/>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
            android:id="@+id/word"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFFFF"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="10dp">
    </LinearLayout>

    <GridView
            android:id="@+id/letters"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="#FF000000"
            android:horizontalSpacing="5dp"
            android:numColumns="7"
            android:padding="5dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp"/>

</LinearLayout>