<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        tools:context=".frontend.main.start.RemovePlayerActivity" android:orientation="vertical">

        <Space
                android:layout_height="0sp"
                android:layout_width="0sp"
                android:layout_weight="1"
        />

        <TextView
                android:text="@string/charade_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_charade_word"
                android:textSize="30sp"
                android:textColor="#0000FF"
                android:textStyle="italic"
                android:textAlignment="center"/>

        <Space
                android:layout_height="0sp"
                android:layout_width="0sp"
                android:layout_weight="1"
        />

        <TextView
                android:text="@string/charade_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_charade_type"
                android:textSize="30sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textAlignment="center"/>

        <Space
                android:layout_height="0sp"
                android:layout_width="0sp"
                android:layout_weight="1"
        />

        <CheckBox
                android:id="@+id/checkbox_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center"
                tools:visibility="visible"/>

        <CheckBox
                android:id="@+id/checkbox_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center"
                tools:visibility="visible"/>

        <CheckBox
                android:id="@+id/checkbox_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center"
                tools:visibility="visible"/>

        <CheckBox
                android:id="@+id/checkbox_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center"
                tools:visibility="visible"/>

        <CheckBox
                android:id="@+id/checkbox_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center"
                tools:visibility="visible"/>

        <CheckBox
                android:id="@+id/checkbox_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center"
                tools:visibility="visible"/>

    <Space
            android:layout_height="0sp"
            android:layout_width="0sp"
            android:layout_weight="1"
    />


    <TextView
            android:id="@+id/text_view_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winners"
            android:layout_gravity="center"
            android:textSize="20sp" />

    <Space
            android:layout_height="0sp"
            android:layout_width="0sp"
            android:layout_weight="1"
    />

    <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm" />

    <Button
            android:id="@+id/button_new_charade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_charade" />

    <Space
            android:layout_height="0sp"
            android:layout_width="0sp"
            android:layout_weight="1"
    />


</LinearLayout>