<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#fcfcfc"
            android:gravity="center"
            android:id="@+id/ll">

        <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="340sp"
                    android:layout_height="150sp"
                    android:layout_margin="10sp"
                    android:id="@+id/charadeCardView">
                <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="64sp"
                            android:layout_height="64sp"
                            android:background="@drawable/charades"
                            android:padding="10dp"/>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/charade"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="340sp"
                    android:layout_height="150sp"
                    android:layout_margin="10sp"
                    android:id="@+id/hangmanCardView">
                <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="64sp"
                            android:layout_height="64sp"
                            android:background="@drawable/hangman"
                            android:padding="10dp"/>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/hangman"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="340sp"
                    android:layout_height="150sp"
                    android:layout_margin="10dp"
                    android:id="@+id/tikBumCardView">
                <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="64sp"
                            android:layout_height="64sp"
                            android:background="@drawable/tikbum"
                            android:padding="10dp"/>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/tikBum"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>